Fix overflow no chrome

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -4,7 +4,7 @@
 
 html,
 body {
-  @apply bg-surface-950;
+  @apply bg-surface-950 m-0 p-0 overflow-x-hidden;
 }
 
 * {
